WIP Send mails to URA with observatory results

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -238,6 +238,7 @@ boton.modificar                = Modificar
 boton.regenerar.resultados     = Regenerar resultados
 boton.regenerar.resultados.alt = Regenerar resultados
 boton.semilla                  = Cargar Semilla
+boton.siguiente                = Siguiente
 boton.volver                   = Volver
 boton.volver.alt               = Volver
 boton.volver.inicio            = Volver a la p\u00E1gina principal
@@ -3205,6 +3206,7 @@ resultado.observatorio.lista.rastreos.realizados                 = Lista de rast
 resultado.observatorio.rastreo.realizado.acciones                = Acciones
 resultado.observatorio.rastreo.realizado.anexos                  = Anexos
 resultado.observatorio.rastreo.realizado.cartucho.asociado       = Cartucho Asociado
+resultado.observatorio.rastreo.realizado.confirm.send            = \u00BFEst\u00E1 seguro de que desea enviar los resultados del observatorio?
 resultado.observatorio.rastreo.realizado.eliminar                = Eliminar
 resultado.observatorio.rastreo.realizado.estado                  = Estado
 resultado.observatorio.rastreo.realizado.estado.error            = Incompleto
@@ -3219,8 +3221,9 @@ resultado.observatorio.rastreo.realizado.informes.individuales   = Informes indi
 resultado.observatorio.rastreo.realizado.puntuacion              = Puntuaci\u00F3n
 resultado.observatorio.rastreo.realizado.resultados              = Resultados individuales
 resultado.observatorio.rastreo.realizado.send                    = Enviar
+resultado.observatorio.rastreo.realizado.send.confirm.info       = Una vez guardados los cambios se proceder\u00E1 al env\u00EDo de los resultados a aquellas URA que tengan configurado el env\u00EDo autom\u00E1tico.
 resultado.observatorio.rastreo.realizado.send.info               = \u00BFEst\u00E1 seguro de que desea generar los resultados del Observatorio?
-resultado.observatorio.rastreo.realizado.send.info2              = Una vez guardados los cambios se generar\u00E1 la informaci\u00F3n necesaria para el posterior env\u00EDo de los resultados. Una vez finalizado este proceso se notificar\u00E1 por correo electr\u00F3nico para proceder a personalizar los env\u00EDos y programar los mismos.
+resultado.observatorio.rastreo.realizado.send.info3              = Una vez guardados los cambios se calcular\u00E1n los rangos de mejora o empoeramiento de las URAs del observatorio para poder personalizar los corres electr\u00F3nicos. Estre proceso puede tardar unos minutos.
 resultado.observatorio.rastreo.realizado.vacio                   = Por el momento no hay resultados para la semilla seleccionada.
 resultado.observatorio.relanzar.ejecucion.rastreo                = Relanzar Ejecuci\u00F3n Semilla
 resultado.observatorio.ver.rastreos.realizados                   = Ver Resultados de Rastreos de Semilla
