WIP Import dependencies from xlsx file

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -799,9 +799,14 @@ img.calendario.alt = Calendario
 img.delete.term    = Eliminar t\u00E9rmino
 img.edit.term      = Editar t\u00E9rmino
 
-importar.semillas.info  = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
-importar.semillas.info2 = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong> 
-importar.semillas.title = Importaci\u00F3n masiva de semillas
+importar.dependencias.new.title           = Nuevas
+importar.dependencias.new.title.total     = Se van a crear un total de <strong>{0}</strong> dependencias
+importar.dependencias.title               = Importar dependencias
+importar.dependencias.updated.title       = Actualizadas
+importar.dependencias.updated.title.total = Se van a actualizar un total de <strong>{0}</strong> dependencias
+importar.semillas.info                    = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
+importar.semillas.info2                   = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong> 
+importar.semillas.title                   = Importaci\u00F3n masiva de semillas
 
 indice.cartuchos.accion.borrar                             = Eliminar Cartucho
 indice.cartuchos.accion.desinstalar                        = Desinstalar Cartucho
@@ -1288,6 +1293,7 @@ migas.html.segment.results.2                             = Distribuci\u00F3n de 
 migas.html.segment.results.3                             = Comparaci\u00F3n de Medias por Verificaci\u00F3n
 migas.html.segment.results.4                             = Comparaci\u00F3n de Modalidad por Verificaci\u00F3n
 migas.html.segment.results.5                             = Anal\u00EDtica orientada a Aspectos
+migas.import.dependencies                                = Importar dependencias
 migas.indice.observatorios.menu.categorias.graficas      = Segmentos
 migas.indice.observatorios.menu.graficas                 = Gr\u00E1ficas
 migas.indice.observatorios.menu.graficas.evolucion       = Evoluci\u00F3n
