Import dependencies from xlsx file

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -799,14 +799,16 @@ img.calendario.alt = Calendario
 img.delete.term    = Eliminar t\u00E9rmino
 img.edit.term      = Editar t\u00E9rmino
 
-importar.dependencias.new.title           = Nuevas
-importar.dependencias.new.title.total     = Se van a crear un total de <strong>{0}</strong> dependencias
-importar.dependencias.title               = Importar dependencias
-importar.dependencias.updated.title       = Actualizadas
-importar.dependencias.updated.title.total = Se van a actualizar un total de <strong>{0}</strong> dependencias
-importar.semillas.info                    = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
-importar.semillas.info2                   = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong> 
-importar.semillas.title                   = Importaci\u00F3n masiva de semillas
+importar.dependencias.inalterable.title       = Inalteradas
+importar.dependencias.inalterable.title.total = Un total de <strong>{0}</strong> dependencias no se van a modificar
+importar.dependencias.new.title               = Nuevas
+importar.dependencias.new.title.total         = Se van a crear un total de <strong>{0}</strong> dependencias
+importar.dependencias.title                   = Importar dependencias
+importar.dependencias.updated.title           = Actualizadas
+importar.dependencias.updated.title.total     = Se van a actualizar un total de <strong>{0}</strong> dependencias
+importar.semillas.info                        = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
+importar.semillas.info2                       = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong> 
+importar.semillas.title                       = Importaci\u00F3n masiva de semillas
 
 indice.cartuchos.accion.borrar                             = Eliminar Cartucho
 indice.cartuchos.accion.desinstalar                        = Desinstalar Cartucho
