--- a/wcagemtool/docker-compose.yml
+++ b/wcagemtool/docker-compose.yml
@@ -10,10 +10,13 @@ services:
 
   nginx:
     image: artefactos-ic.scae.redsara.es:6000/nginx:1.13.8-alpine      
+    #image: nginx:1.13.8-alpine          
     ports:
-      - "9000:80"
+      - "9000:443"
     volumes:
       - ./nginx_conf.conf:/etc/nginx/conf.d/default.conf
+      - ./server.crt:/etc/nginx/ssl/server.crt
+      - ./server.key:/etc/nginx/ssl/server.key         
     links:
       - node
     restart: always
