--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -377,6 +377,7 @@ colname.acronym            = Acr\u00F3nimo
 colname.active             = Activa
 colname.analysis.type      = Tipo de an\u00E1lisis
 colname.classification     = Clasificaci\u00F3n
+colname.color              = Color (gr\u00E1ficas)
 colname.complex            = Complejidad
 colname.custom.message     = P\u00E1rrafo personalizado
 colname.date               = Fecha
@@ -422,6 +423,7 @@ colname.type               = Tipo
 colname.upload             = Cargar
 colname.user               = Usuario
 colname.website.type       = Tipo de portal *
+colname.weight             = Peso
 colname.width              = Amplitud
 
 completado = completado
@@ -3148,12 +3150,13 @@ problem.line   = L\u00EDnea
 
 puertos.vacios = Debe rellenar al menos el primer puerto.
 
-range.observatory.modal.delete.title = \u00BFEst\u00E1 seguro de que desea eliminar el rango 
-range.observatory.modal.new.title    = Nuevo rango
-range.observatory.new.max            = Valor superior
-range.observatory.new.min            = Valor inferior
-range.observatory.new.name           = Nombre
-range.observatory.new.template       = Plantilla de correo
+range.observatory.modal.delete.confirm = \u00BFEst\u00E1 seguro de que desea eliminar el rango 
+range.observatory.modal.delete.title   = RASTREADOR WEB - Eliminar rango
+range.observatory.modal.new.title      = Nuevo rango
+range.observatory.new.max              = Valor superior
+range.observatory.new.min              = Valor inferior
+range.observatory.new.name             = Nombre
+range.observatory.new.template         = Plantilla de correo
 
 rango.hilos  = El n\u00FAmero de hilos debe estar entre 0 y 200.
 rango.ip     = Rango de Ip: 0-255.
