Import dependencies inclues ambit
Add new fields to search dependency form

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -375,6 +375,7 @@ client.accounts.info = Estos son las cuentas clientes a las que est\u00E1 suscri
 
 colname.acronym            = Acr\u00F3nimo
 colname.active             = Activa
+colname.ambit              = \u00C1mbito
 colname.analysis.type      = Tipo de an\u00E1lisis
 colname.classification     = Clasificaci\u00F3n
 colname.color              = Color (gr\u00E1ficas)
