--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -290,6 +290,21 @@
 			<version>3.27.0-GA</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.passay</groupId>
+			<artifactId>passay</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 </project>
