--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -390,6 +390,7 @@ colname.download           = Descargar
 colname.email              = Email
 colname.error              = Error
 colname.etiqeutas          = Etiquetas
+colname.file               = Fichero
 colname.go                 = Ir
 colname.historic           = Hist\u00F3rico
 colname.id                 = ID
@@ -402,6 +403,7 @@ colname.name               = Nombre
 colname.observations       = Observaciones
 colname.official           = Oficial
 colname.oldname            = Nombre antiguo
+colname.password           = Contrase\u00F1a
 colname.province           = Provincia
 colname.puntuaction        = Puntuaci\u00F3n
 colname.range              = Rango
@@ -815,6 +817,8 @@ img.calendario.alt = Calendario
 img.delete.term    = Eliminar t\u00E9rmino
 img.edit.term      = Editar t\u00E9rmino
 
+importar.dependencias.delete.title            = A borrar
+importar.dependencias.delete.title.total      = Se van a borrar un total de <strong>{0}</strong> dependencias
 importar.dependencias.error.title             = Errores
 importar.dependencias.error.title.total       = Un total de <strong>{0}</strong> dependencias contienen errores
 importar.dependencias.inalterable.title       = Inalteradas
@@ -822,6 +826,8 @@ importar.dependencias.inalterable.title.total = Un total de <strong>{0}</strong>
 importar.dependencias.new.title               = Nuevas
 importar.dependencias.new.title.total         = Se van a crear un total de <strong>{0}</strong> dependencias
 importar.dependencias.title                   = Importar dependencias
+importar.dependencias.undelete.title          = No borradas
+importar.dependencias.undelete.title.total    = No se pueden un total de <strong>{0}</strong> dependencias porque est\u00E1n asociadas a una o varias semillas
 importar.dependencias.updated.title           = Actualizadas
 importar.dependencias.updated.title.total     = Se van a actualizar un total de <strong>{0}</strong> dependencias
 importar.semillas.info                        = Se ha procesado correctamente el fichero. A continuci\u00F3n se muestran los cambios que se van a realizar con los datos cargados del fichero.
@@ -2681,6 +2687,7 @@ observatory.evolution.segment.title                                           = 
 observatory.extra.config.autorelaunch                                         = Relanzamientos autom\u00E1ticos
 observatory.extra.config.button                                               = Configuraci\u00F3n global
 observatory.extra.config.depth                                                = Profundidad relanzamiento (niveles)
+observatory.extra.config.files.expiration.days                                = D\u00EDas para conservar ficheros de resultados del observatorio
 observatory.extra.config.first.classification.threshold                       = Margen mejora (para comparativas en anexos)
 observatory.extra.config.info                                                 = Configuraci\u00F3n global aplicable a todos los observatorios. Esta configuraci\u00F3n es utilizada por los procesos de relanzamiento. Puede editar la configuraci\u00F3n pulsando sobre los valores de la tabla inferior:
 observatory.extra.config.name                                                 = Nombre
@@ -3195,7 +3202,7 @@ report.config.observatorios.filter.title             = Observatorios para inclui
 report.config.observatorios.filter.title.global      = Observatorios para incluir en el informe 
 report.config.observatorios.templates.button.new     = Nuevo rango
 report.config.observatorios.templates.info           = Se pueden usar las siguientes marcas de sustituci\u00F3n:
-report.config.observatorios.templates.info.list      = <ul><li style="list-style: disc;margin-left: 2%;">[oficiosa]--texto--[/oficiosa]: el texto entre estas marcas s\u00F3lo se usar\u00E1 si la URA es oficiosa</li> <li style="list-style: disc;margin-left: 2%;">[oficial]--texto--[/oficial]: el texto entre estas marcas s\u00F3lo se usar\u00E1 si la URA es oficial</li> <li style="list-style: disc;margin-left: 2%;">_ura_name_: Nombre de la URA</li> <li style="list-style: disc;margin-left: 2%;">_ura_custom_text_: Texto personalizado (en el siguiente paso)</li></ul>
+report.config.observatorios.templates.info.list      = <ul><li style="list-style: disc;margin-left: 2%;">[oficiosa]--texto--[/oficiosa]: el texto entre estas marcas s\u00F3lo se usar\u00E1 si la URA es oficiosa</li> <li style="list-style: disc;margin-left: 2%;">[oficial]--texto--[/oficial]: el texto entre estas marcas s\u00F3lo se usar\u00E1 si la URA es oficial</li> <li style="list-style: disc;margin-left: 2%;">_ura_name_: Nombre de la URA</li> <li style="list-style: disc;margin-left: 2%;">_ura_custom_text_: Texto personalizado (en el siguiente paso)</li><li style="list-style: disc;margin-left: 2%;">_ura_download_link_: Enlace al fichero con los resultados (generado autom\u00E1ticamente durante el proceso de env\u00EDo)</li><li style="list-style: disc;margin-left: 2%;">_ura_download_pass_: Contrase\u00F1a del fichero de resultados (generado autom\u00E1ticamente durante el proceso de env\u00EDo)</li></ul>
 report.config.observatorios.templates.title          = Configuraci\u00F3n de rangos y plantillas
 report.config.optional.1                             = Resultados globales. Modalidad de verificaci\u00F3n
 report.config.optional.2                             = Resultados globales. Puntuaci\u00F3n media por aspectos
