FIx unescape html characters on sedn mail using sim

--- a/portal/profiles/desarrollo/mail.properties
+++ b/portal/profiles/desarrollo/mail.properties
@@ -18,7 +18,7 @@ mail.message            = Informe del rastreo efectuado el d\u00EDa {0} para la 
 mail.message.subject    = Rastreador Web MINHAP
 mail.smtp.host          = smtp.fundacionctic.org
 mail.smtp.tls           = false
-mail.transport.protocol = smtp
+mail.transport.protocol = sim
 
 
 #Integracion
@@ -26,5 +26,7 @@ sim.mailservice.wsdl.url = https://pre-misim.redsara.es/misim-bus-webapp/EnvioMe
 sim.user.password        = OAW,16.SIM
 sim.user.username        = observ.accesibilidad
 sim.mailservice.id       = 942
+
+
 
 warning.administrator.message = Se le ha enviado este correo para avisarle de que ha tenido lugar un error irrecuperable en el Rastreador Web:
