FIx unescape html characters on sedn mail using sim

--- a/portal/profiles/desarrollo/mail.properties
+++ b/portal/profiles/desarrollo/mail.properties
@@ -18,7 +18,7 @@ mail.message            = Informe del rastreo efectuado el d\u00EDa {0} para la 
 mail.message.subject    = Rastreador Web MINHAP
 mail.smtp.host          = smtp.fundacionctic.org
 mail.smtp.tls           = false
-mail.transport.protocol = sim
+mail.transport.protocol = smtp
 
 
 #Integracion
