Some mail send result changes

--- a/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
@@ -2685,6 +2685,7 @@ observatory.extra.config.autorelaunch                                         = 
 observatory.extra.config.button                                               = Configuraci\u00F3n global
 observatory.extra.config.depth                                                = Profundidad relanzamiento (niveles)
 observatory.extra.config.files.expiration.days                                = D\u00EDas para conservar ficheros de resultados del observatorio
+observatory.extra.config.files.mapping                                        = Direcci\u00F3n base del servidor de ficheros para el env\u00EDo de resultados
 observatory.extra.config.first.classification.threshold                       = Margen mejora (para comparativas en anexos)
 observatory.extra.config.info                                                 = Configuraci\u00F3n global aplicable a todos los observatorios. Esta configuraci\u00F3n es utilizada por los procesos de relanzamiento. Puede editar la configuraci\u00F3n pulsando sobre los valores de la tabla inferior:
 observatory.extra.config.name                                                 = Nombre
@@ -3501,15 +3502,16 @@ semilla.vacia                  = No hay semillas disponibles.
 
 semillas.observatorio.title = Asociar Semillas a Observatorio
 
-send.mail.async.info                   = Se est\u00E1n enviado los resultados por email. Cuando termine el proceso se enviar\u00E1 un correo notificando la finalizaci\u00F3n del proceso e indicando los posibles errores que se hayan producido.
-send.mail.async.title                  = Env\u00EDo resultados por correo electr\u00F3nico
-send.mail.end.process.mail.body        = El env\u00EDo de los resultados ha finalizado para el observatorio {0}.
-send.mail.end.process.mail.notSend     = No se han podido enviar los resultados a las siguientes URAs
-send.mail.end.process.mail.subject     = Env\u00EDo de resultados completado
-send.numHilos                          = N\u00FAmero de hilos
-send.numRastreos                       = N\u00FAmero de rastreos
-send.results.observatory.title         = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
-send.results.observatory.title.results = Resultados del env\u00EDo autom\u00E1tico de resultados
+send.mail.async.info                       = Se est\u00E1n enviado los resultados por email. Cuando termine el proceso se enviar\u00E1 un correo notificando la finalizaci\u00F3n del proceso e indicando los posibles errores que se hayan producido.
+send.mail.async.title                      = Env\u00EDo resultados por correo electr\u00F3nico
+send.mail.end.process.mail.body            = El env\u00EDo de los resultados ha finalizado para el observatorio {0}.
+send.mail.end.process.mail.expiration.date = (disponible hasta el {0})
+send.mail.end.process.mail.notSend         = No se han podido enviar los resultados a las siguientes URAs
+send.mail.end.process.mail.subject         = Env\u00EDo de resultados completado
+send.numHilos                              = N\u00FAmero de hilos
+send.numRastreos                           = N\u00FAmero de rastreos
+send.results.observatory.title             = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
+send.results.observatory.title.results     = Resultados del env\u00EDo autom\u00E1tico de resultados
 
 servicio.diagnostico.estadisticas.amplitud            = Amplitud
 servicio.diagnostico.estadisticas.avg                 = Tiempo medio de los an\u00E1lisis
