Send mail ura summary page
Load data in step 1 i previous config exists

--- a/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
@@ -3198,6 +3198,7 @@ report.config.etiquetas.filter.info                  = El filtrado de etiquetas 
 report.config.etiquetas.filter.title                 = Filtrar por etiquetas
 report.config.graficas.filter.info                   = Seleccione las gr\u00E1ficas opcionales a incluir en el obervatorio
 report.config.graficas.filter.title                  = Gr\u00E1ficas opcionales a incluir
+report.config.observatorios.customize.title          = Personalizaci\u00F3n de env\u00EDos
 report.config.observatorios.filter.title             = Observatorios para incluir en el evolutivo 
 report.config.observatorios.filter.title.global      = Observatorios para incluir en el informe 
 report.config.observatorios.templates.button.new     = Nuevo rango
