Send mail ura summary page
Load data in step 1 i previous config exists

--- a/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
@@ -3505,24 +3505,27 @@ semilla.vacia                  = No hay semillas disponibles.
 
 semillas.observatorio.title = Asociar Semillas a Observatorio
 
-send.mail.async.info                            = Se est\u00E1n enviado los resultados por email. Cuando termine el proceso se enviar\u00E1 un correo notificando la finalizaci\u00F3n del proceso e indicando los posibles errores que se hayan producido.
-send.mail.async.title                           = Env\u00EDo resultados por correo electr\u00F3nico
-send.mail.end.process.mail.body                 = El env\u00EDo de los resultados ha finalizado para el observatorio {0}.
-send.mail.end.process.mail.expiration.date      = (disponible hasta el {0})
-send.mail.end.process.mail.notSend              = No se han podido enviar los resultados a las siguientes URAs
-send.mail.end.process.mail.subject              = Env\u00EDo de resultados completado
-send.numHilos                                   = N\u00FAmero de hilos
-send.numRastreos                                = N\u00FAmero de rastreos
-send.results.observatory.custom.title           = P\u00E1rrafos personalizados
-send.results.observatory.list                   = Listado de resultados enviados
-send.results.observatory.summary.send.manual    = Las siguientes unidades tienen configurado el env\u00EDo manual de resultados:
-send.results.observatory.summary.send.nas.text  = Se han subido a las NAS {0} ficheros de un total de {1} que estar\u00E1n disponibles hasta el d\u00EDa {2} (El detalle de entidades cuyos ficheros no se han podido subir a la NAS puede verse en Listado de resultados enviados)\n
-send.results.observatory.summary.send.nas.title = Resumen de ficheros subidos a la NAS
-send.results.observatory.summary.text           = Se han enviado {0} correos de un total de {1}. (El detalle de entidades a las que no se ha podido enviar el correo puede verse en Listado de resultados enviados)
-send.results.observatory.summary.title          = Resumen del env\u00EDo de correos
-send.results.observatory.title                  = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
-send.results.observatory.title.results          = Resultados del env\u00EDo autom\u00E1tico de resultados
-send.results.observatory.title.results.config   = Configuraci\u00F3n del env\u00EDoConfiguraci\u00F3n del env\u00EDo
+send.mail.async.info                             = Se est\u00E1n enviado los resultados por email. Cuando termine el proceso se enviar\u00E1 un correo notificando la finalizaci\u00F3n del proceso e indicando los posibles errores que se hayan producido.
+send.mail.async.title                            = Env\u00EDo resultados por correo electr\u00F3nico
+send.mail.end.process.mail.body                  = El env\u00EDo de los resultados ha finalizado para el observatorio {0}.
+send.mail.end.process.mail.expiration.date       = (disponible hasta el {0})
+send.mail.end.process.mail.notSend               = No se han podido enviar los resultados a las siguientes URAs
+send.mail.end.process.mail.subject               = Env\u00EDo de resultados completado
+send.numHilos                                    = N\u00FAmero de hilos
+send.numRastreos                                 = N\u00FAmero de rastreos
+send.results.observatory.custom.title            = P\u00E1rrafos personalizados
+send.results.observatory.list                    = Listado de resultados enviados
+send.results.observatory.summary.send.manual     = Las siguientes unidades tienen configurado el env\u00EDo manual de resultados:
+send.results.observatory.summary.send.nas.text   = Se han subido a las NAS {0} ficheros de un total de {1} que estar\u00E1n disponibles hasta el d\u00EDa {2} (El detalle de entidades cuyos ficheros no se han podido subir a la NAS puede verse en Listado de resultados enviados)\n
+send.results.observatory.summary.send.nas.title  = Resumen de ficheros subidos a la NAS
+send.results.observatory.summary.text            = Se han enviado {0} correos de un total de {1}. (El detalle de entidades a las que no se ha podido enviar el correo puede verse en Listado de resultados enviados)
+send.results.observatory.summary.title           = Resumen del env\u00EDo de correos
+send.results.observatory.title                   = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
+send.results.observatory.title.results           = Resultados del env\u00EDo autom\u00E1tico de resultados
+send.results.observatory.title.results.config    = Configuraci\u00F3n del env\u00EDoConfiguraci\u00F3n del env\u00EDo
+send.results.observatory.title.results.no.filter = Sin filtros
+send.results.observatory.title.results.none      = No se ha realizado ning\u00FAn env\u00EDo para esta iteraci\u00F3n
+send.results.observatory.title.results.number    = Se han realizado {0} env\u00EDos para esta iteraci\u00F3n
 
 servicio.diagnostico.estadisticas.amplitud            = Amplitud
 servicio.diagnostico.estadisticas.avg                 = Tiempo medio de los an\u00E1lisis
