Fix basic service for single file
UX improvments

--- a/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
@@ -407,6 +407,7 @@ colname.password           = Contrase\u00F1a\u00BA
 colname.province           = Provincia
 colname.puntuaction        = Puntuaci\u00F3n
 colname.range              = Rango
+colname.range.score        = Puntuaci\u00F3n de Evoluci\u00F3n
 colname.relaunch           = Relanzar
 colname.remove             = Eliminar
 colname.remove.permanently = Eliminar definitivamente
@@ -1074,7 +1075,7 @@ maximo.rastreos = El n\u00FAmero m\u00E1ximo de rastreos del cartucho ha sido su
 mensaje.certificado.ya.registrado                             = El certificado digital ya estaba registrado o la p\u00E1gina es accesible a trav\u00E9s del puerto HTTP normal.
 mensaje.error.campos.complejidad.numericos                    = Profundidad y amplitud deben ser n\u00FAmeros positivos
 mensaje.error.cartucho                                        = Se ha creado la cuenta cliente pero han fallado la creaci\u00F3n de los rastreos: {0}
-mensaje.error.documento.plantilla.formato                     = Formato no va\u013Aido. S\u00F3lo de admiten ficheros en formato .odt, .ods o .xlsx
+mensaje.error.documento.plantilla.formato                     = Formato no v\u00E1lido. S\u00F3lo de admiten ficheros en formato .odt, .ods o .xlsx
 mensaje.error.documento.plantilla.obligatorio                 = El documento de la plantilla es obligatorio
 mensaje.error.fichero.corrupto                                = El fichero al que est\u00E1 intentando acceder no est\u00E1 disponible o est\u00E1 corrupto. Por favor, proceda a subir un nuevo fichero.
 mensaje.error.generico                                        = No se ha podido realizar la acci\u00F3n seleccionada. Si el problema persiste, pongase en contacto con el administrador del sitio.
