--- a/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
@@ -773,6 +773,7 @@ generar.informe.agregado.observatorio.title          = Generaci\u00F3n de inform
 generar.informes.observatorio.aviso_correo           = Se enviar\u00E1 un aviso al correo electr\u00F3nico {0} cuando finalice el proceso.
 generar.informes.observatorio.tiempo_espera          = El proceso de generaci\u00F3n de todos los informes durar\u00E1 aproximadamente {0} minutos.
 generar.informes.observatorio.tiempo_espera.agregado = El proceso de generaci\u00F3n del informe agregado tardar\u00E1 varios minutos.
+generar.informes.observatorio.tiempo_espera.annex    = El proceso de generaci\u00F3n de los anexos tardar\u00E1 varios minutos.
 generar.informes.observatorio.title                  = Generar informes PDFs del observatorio
 
 gestion.certificado                         = Gesti\u00F3n de Certificados
