--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -96,6 +96,8 @@ export.open.office.template.common = ${deploy.path}/WEB-INF/templatesODT/Plantil
 export.open.office.template.common.category = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Segmento.odt
 export.open.office.template.common.complexities = ${deploy.path}/WEB-INF/templatesODT/Plantilla_Complejidad.odt
 
+export.open.office.template.common.accesibility.evol.ambit = ${deploy.path}/WEB-INF/templatesODT/Generica_Accesibilidad_Evol_Ambits.odt
+
 export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.ods
 export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profunidad_v1.xlsx
 
