--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -232,6 +232,7 @@ borrar.semillas.titulo         = Borrar Semillas
 boton.aceptar                  = Aceptar
 boton.aceptar.anadir.semilla   = A\u00F1adir/Eliminar Semillas
 boton.buscar                   = Buscar
+boton.calcular.rangos          = Calcular rangos
 boton.cancelar                 = Cancelar
 boton.crear.cuenta.cliente     = Crear Cuenta Cliente
 boton.crear.observatorio       = Crear Observatorio
@@ -249,6 +250,7 @@ boton.regenerar.resultados     = Regenerar resultados
 boton.regenerar.resultados.alt = Regenerar resultados
 boton.semilla                  = Cargar Semilla
 boton.siguiente                = Siguiente
+boton.ver.rangos               = Ver rangos y finalizar configuraci\u00F3n
 boton.volver                   = Volver
 boton.volver.alt               = Volver
 boton.volver.inicio            = Volver a la p\u00E1gina principal
@@ -1399,6 +1401,8 @@ migas.semillas.listado.webs                              = Listado Webs
 migas.semillas.observatorio                              = Semillas
 migas.semillas.resultados.google                         = Resultados Google
 migas.semillas.web                                       = Semillas Webs
+migas.send.results.calculate                             = Calcular evoluci\u00F3n de URAs
+migas.send.results.send                                  = Envi\u00F3 de resultados a las URAs
 migas.show.malware.content.file                          = Contenido del archivo
 migas.subir                                              = Subir
 migas.subir.cartucho                                     = Subir Cartucho
@@ -3515,6 +3519,9 @@ semillas.observatorio.title = Asociar Semillas a Observatorio
 
 send.mail.async.info                             = Se est\u00E1n enviado los resultados por email. Cuando termine el proceso se enviar\u00E1 un correo notificando la finalizaci\u00F3n del proceso e indicando los posibles errores que se hayan producido.
 send.mail.async.title                            = Env\u00EDo resultados por correo electr\u00F3nico
+send.mail.calculate.async.info                   = Se est\u00E1n calculando los resultados de evoluci\u00F3n por dependencia. Esta operaci\u00F3n tardar\u00E1 varios minutos. Cuando termine el proceso se enviar\u00E1 un correo notificando la finalizaci\u00F3n del mismo.
+send.mail.calculate.end.process.mail.body        = El proceso de c\u00E1lculo de los resultados ha finalizado para el observatorio {0}.
+send.mail.calculate.end.process.mail.subject     = C\u00E1lculo de evoluci\u00F3n para el env\u00EDo de resultados completado
 send.mail.end.process.mail.body                  = El env\u00EDo de los resultados ha finalizado para el observatorio {0}.
 send.mail.end.process.mail.expiration.date       = (disponible hasta el {0})
 send.mail.end.process.mail.notSend               = No se han podido enviar los resultados a las siguientes URAs
